--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,13 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:design:27.1.1'
+
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.google.firebase:firebase-core:16.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+//    androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     //a bunch of good libraries to examine and possibly utilize
@@ -41,6 +42,12 @@ dependencies {
     implementation 'com.squareup.okio:okio:1.14.0'    //okIO
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'    //Retrofit
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'    //rxBinding
+    implementation 'com.jakewharton.rxbinding2:rxbinding-support-v4:2.1.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.1.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-design:2.1.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-recyclerview-v7:2.1.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-leanback-v17:2.1.1'
+
     implementation 'com.airbnb.android:lottie:2.5.4'    //Lottie animations
     implementation 'com.nabinbhandari.android:permissions:3.5'//Permission Handler
     implementation 'com.github.medyo:fancybuttons:1.8.4'//Fancy buttons? sounds tight.
